feat(): active player + player move

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <div id="game"></div>
 
+    <script type="application/javascript" src="js/player.js"></script>
     <script type="application/javascript" src="js/index.js"></script>
 </body>
 </html>
